Finalização do Projetogit add .git add .

--- a/public/conteudo.ejs
+++ b/public/conteudo.ejs
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dicas | Aquela da Lactose</title>
+    <title>Conteúdo | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/categoria.css">
+    <link rel="stylesheet" href="css/conteudo.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
 
@@ -75,52 +75,37 @@
     <div class="divisor">
 
         <span>
-            Dicas
+            Titulo do Conteúdo
         </span>
 
         <img src="img/divisor.png" alt="" width="900px">
 
     </div>
 
-    <div class="linha_conteudos">
 
+    <div class="container_geral">
         <div class="conteudo">
-            <img src="img/chocolate-em-po-tem-lactose.jpg" alt="">
-            <strong>
-                Chocolate em pó tem <br>lactose?
-            </strong>
-            <span>Hoje venho responder uma pergunta
-                que recebo diariamente: chocolate <br> em pó tem
-                lactose?
-            </span>
-
-            <a href="/conteudo"> Leia mais > </a>
-        </div>
-
-        <div class="conteudo">
-            <img src="img/pode-conter-tracos-de-1.jpg" alt="">
-            <strong>
-                Pode conter traços de leite e glúten – o que isso quer dizer?
-            </strong>
-            <span>
-                Você já deve ter visto em diversas embalagens o famoso pode conter traços de leite...
-            </span>
-            <a href="/conteudo"> Leia mais > </a>
-        </div>
-
-        <div class="conteudo">
-            <img src="img/não-é-intolerância-alimentar.jpg" alt="">
-            <strong>
-                Não é intolerância alimentar, é estresse!
-            </strong>
-            <span>
-                Sei que este post pode dar o que falar, mas ele é necessário! Conversando com a Flavia sobre temas
-                para...
-            </span>
-
-            <a href="/conteudo"> Leia mais > </a>
+            <img src="img/conteudo-tudo-sobre-a-lactose.jpg" alt="">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, omnis deserunt tempore, vero obcaecati
+            similique ipsum architecto libero dolores ipsa reprehenderit, sunt vel. Blanditiis velit quisquam
+            repellendus commodi! Nobis, modi!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut fuga veniam unde? Excepturi earum rem natus
+            vero voluptatum aliquam laborum quo eaque? Culpa laudantium dolore amet placeat neque distinctio alias.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quaerat laboriosam nisi sint, distinctio
+            vel impedit voluptates? Magni vitae magnam nemo placeat inventore minima doloribus, libero a velit, aperiam
+            voluptas.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, omnis deserunt tempore, vero obcaecati
+            similique ipsum architecto libero dolores ipsa reprehenderit, sunt vel. Blanditiis velit quisquam
+            repellendus commodi! Nobis, modi!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut fuga veniam unde? Excepturi earum rem natus
+            vero voluptatum aliquam laborum quo eaque? Culpa laudantium dolore amet placeat neque distinctio alias.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quaerat laboriosam nisi sint, distinctio
+            vel impedit voluptates? Magni vitae magnam nemo placeat inventore minima doloribus, libero a velit, aperiam
+            voluptas.
         </div>
     </div>
+
+
 
     <!-- INCIO FOOTER -->
     <div class="footer">
