--- a/public/index.ejs
+++ b/public/index.ejs
@@ -88,9 +88,11 @@
             <br>
             a Lactose
             <br>
-            <button class="btn_categoria efeito_btn">
-                vem ver
-            </button>
+            <a href="/tudo-sobre-lactose">
+                <button class="btn_categoria efeito_btn">
+                    vem ver
+                </button>
+            </a>
         </div>
 
         <div class="categoria categoria2">
@@ -98,9 +100,11 @@
             <br>
             amamos
             <br>
-            <button class="btn_categoria efeito_btn">
-                vem ver
-            </button>
+            <a href="/receitas">
+                <button class="btn_categoria efeito_btn">
+                    vem ver
+                </button>
+            </a>
         </div>
 
         <div class="categoria categoria3">
@@ -108,9 +112,11 @@
             <br>
             facilitar a vida
             <br>
-            <button class="btn_categoria efeito_btn">
-                vem ver
-            </button>
+            <a href="/dicas">
+                <button class="btn_categoria efeito_btn">
+                    vem ver
+                </button>
+            </a>
         </div>
     </div>
     <!-- FIM CATEGORIAS -->
@@ -125,65 +131,46 @@
 
     </div>
 
-    <div class="container_categorias">
+    <div class="linha_conteudos">
 
-        <div class="categoria categoria_populares">
-
-            <img src="img/conteudo-tudo-sobre-a-lactose.jpg">
-
-            <span class="titulo_populares">
-                Tudo que você precisa saber sobre a Intolerância a Lactose!
+        <div class="conteudo">
+            <img src="img/chocolate-em-po-tem-lactose.jpg" alt="">
+            <strong>
+                Chocolate em pó tem <br>lactose?
+            </strong>
+            <span>Hoje venho responder uma pergunta
+                que recebo diariamente: chocolate <br> em pó tem
+                lactose?
             </span>
 
-            <span class="texto_populares">
-                Barriga estufada, cólicas, excesso de gases, dor de cabeça, manchas vermelhas na pele, diarreia ou
-                constipação e até dores <br>musculares e
-                articulares?
-            </span>
-
-            <button class="btn_populares efeito_btn">
-                ler mais
-            </button>
+            <a href="/conteudo"> Leia mais > </a>
         </div>
 
-        <div class="categoria categoria_populares">
-
-            <img src="img/conteudo-tudo-sobre-a-lactose.jpg">
-
-            <span class="titulo_populares">
-                Tudo que você precisa saber sobre a Intolerância a Lactose!
+        <div class="conteudo">
+            <img src="img/pode-conter-tracos-de-1.jpg" alt="">
+            <strong>
+                Pode conter traços de leite e glúten – o que isso quer dizer?
+            </strong>
+            <span>
+                Você já deve ter visto em diversas embalagens o famoso pode conter traços de leite...
             </span>
-
-            <span class="texto_populares">
-                Barriga estufada, cólicas, excesso de gases, dor de cabeça, manchas vermelhas na pele, diarreia ou
-                constipação e até dores <br>musculares e
-                articulares?
-            </span>
-
-            <button class="btn_populares efeito_btn">
-                ler mais
-            </button>
+            <a href="/conteudo"> Leia mais > </a>
         </div>
 
-        <div class="categoria categoria_populares">
-
-            <img src="img/conteudo-tudo-sobre-a-lactose.jpg">
-
-            <span class="titulo_populares">
-                Tudo que você precisa saber sobre a Intolerância a Lactose!
+        <div class="conteudo">
+            <img src="img/não-é-intolerância-alimentar.jpg" alt="">
+            <strong>
+                Não é intolerância alimentar, é estresse!
+            </strong>
+            <span>
+                Sei que este post pode dar o que falar, mas ele é necessário! Conversando com a Flavia sobre temas
+                para...
             </span>
 
-            <span class="texto_populares">
-                Barriga estufada, cólicas, excesso de gases, dor de cabeça, manchas vermelhas na pele, diarreia ou
-                constipação e até dores <br>musculares e
-                articulares?
-            </span>
-
-            <button class="btn_populares efeito_btn">
-                ler mais
-            </button>
+            <a href="/conteudo"> Leia mais > </a>
         </div>
 
+    </div>
     </div>
     <!-- FIM POPULARES -->
 
