--- a/public/receitas.ejs
+++ b/public/receitas.ejs
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/categoria.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
 
 </head>
 
 <body>
 
-       <!-- HEADER -->
-       <div class="header">
+    <!-- HEADER -->
+    <div class="header">
         <div class="container_menu">
             <a href="/">
                 <img src="logo/Logo-Aquela-da-Lactose-branco.png" alt="Logo-Aquela-da-Lactose" width="180px">
@@ -70,7 +72,53 @@
     </div>
     <!-- FIM HEADER -->
 
+    <div class="divisor">
 
+        <span>
+            Receitas
+        </span>
+
+        <img src="img/divisor.png" alt="" width="900px">
+
+    </div>
+
+    <div class="linha_conteudos">
+
+        <div class="conteudo">
+            <img src="img/torta-de-limao-sem-lactose.jpg" alt="">
+            <strong>
+                Torta de limão sem<br> lactose
+            </strong>
+            <span>
+                Vocês vão se surpreender <br>muito com essa torta de<br> limão sem lactose!
+            </span>
+
+            <a href="/conteudo"> Leia mais > </a>
+        </div>
+
+        <div class="conteudo">
+            <img src="img/bolo-de-banana-e-cookies-sem-acucar-e-lactose.jpg" alt="">
+            <strong>
+                Bolo de banana e cookies sem açúcar e lactose
+            </strong>
+            <span>
+                Este bolo de banana e cookies sem açúcar e lactose tem tanto sabor que você nem percebe que não há...
+            </span>
+            <a href="/conteudo"> Leia mais > </a>
+        </div>
+
+        <div class="conteudo">
+            <img src="img/Bolo-de-caneca-low-carb.jpg" alt="">
+            <strong>
+                Bolo de caneca<br> low carb
+            </strong>
+            <span>
+                Que tal um bolo de caneca low carb não menos delicioso que o tradicional e super saudável?
+            </span>
+
+            <a href="/conteudo"> Leia mais > </a>
+        </div>
+    </div>
 
     <!-- INCIO FOOTER -->
     <div class="footer">
@@ -81,4 +129,5 @@
         </span>
 
     </div>
+
     <!-- FIM FOOTER -->
