--- a/public/tudo-sobre-lactose.ejs
+++ b/public/tudo-sobre-lactose.ejs
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo Sobre Lactose | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/categoria.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
 
 </head>
 
 <body>
 
-       <!-- HEADER -->
-       <div class="header">
+    <!-- HEADER -->
+    <div class="header">
         <div class="container_menu">
             <a href="/">
                 <img src="logo/Logo-Aquela-da-Lactose-branco.png" alt="Logo-Aquela-da-Lactose" width="180px">
@@ -70,7 +72,54 @@
     </div>
     <!-- FIM HEADER -->
 
+    <div class="divisor">
 
+        <span>
+            Tudo Sobre a Lactose
+        </span>
+
+        <img src="img/divisor.png" alt="" width="900px">
+
+    </div>
+
+    <div class="linha_conteudos">
+
+        <div class="conteudo">
+            <img src="img/Diferença-entre-intolerância-à-lactose-e-SII.jpg" alt="">
+            <strong>
+                Diferença entre intolerância à lactose e SII – síndrome do intestino irritável
+            </strong>
+            <span>
+                Os últimos assuntos do blog tiveram como tema principal a síndrome do intestino irritável
+            </span>
+
+            <a href="/conteudo"> Leia mais > </a>
+        </div>
+
+        <div class="conteudo">
+            <img src="img/Como-usar-enzima-lactase.jpg" alt="">
+            <strong>
+                Quando e como <br>usar enzima<br> lactase
+            </strong>
+            <span>
+                Respondendo várias dúvidas de vocês, hoje venho falar sobre como usar a enzima lactase...
+            </span>
+            <a href="/conteudo"> Leia mais > </a>
+        </div>
+
+        <div class="conteudo">
+            <img src="img/Como-é-a-minha-alimentação-sem-glúten-e-lactose.jpg" alt="">
+            <strong>
+                Como é a minha <br>alimentação sem <br>glúten e lactose.
+            </strong>
+            <span>
+                Para ter saúde e uma alimentação gostosa, não precisamos inventar muita moda e nem ter dor de cabeça,
+                sabia?
+            </span>
+
+            <a href="/conteudo"> Leia mais > </a>
+        </div>
+    </div>
 
     <!-- INCIO FOOTER -->
     <div class="footer">
@@ -81,4 +130,5 @@
         </span>
 
     </div>
+
     <!-- FIM FOOTER -->
